# elasticsearch-incident-commander

./: .gitignore  CHECKPOINT_SUPPORT_PACKAGE_2026-02-16.md  README.md
.github/workflows/: ci.yml
agents/: README.md  pyproject.toml
agents/app/: agent_builder_client.py  agents.py  config.py  elasticsearch_client.py  main.py  models.py
agents/tests/: test_agent_builder_client.py  test_api.py  test_communication_contract.py  test_diagnosis_query_contract.py  test_elasticsearch_client.py  test_integration_hardening.py  test_integrations.py  test_main.py  test_workflow_matrix.py
data/: sample_runbooks.json
docs/checkpoints/: 2026-02-16-integration-hardening-checkpoint.md  checkpoint-2026-02-16.md
elastic/esql_queries/: log_correlation.esql
elastic/index_mappings/: incidents.json
elastic/workflows/: remediation-rollback.yaml
frontend/: README.md  app.js  index.html  styles.css
frontend/api/: health.js
frontend/api/incidents/: run.js
scripts/: demo_scenario.py
submission-package/: DEMO_VIDEO_SCRIPT.md  DEVPOST_DRAFT.md  README_ALIGNMENT_DIFF.md  SUBMISSION_CHECKLIST.md
