[project]
name = "incident-commander-agents"
version = "0.2.0"
description = "Multi-agent incident commander backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.1",
  "pydantic>=2.8.2",
  "elasticsearch>=8.14.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.2",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
